cleaned up CryptUtils class